# CINE-MAGIC-CAM

./: .gitignore  ANALYSIS_SUMMARY.md  BUILD_VALIDATION.md  CHANGES.md  CHECKLIST.md  CODEMAGIC_SETUP.md  COMPILATION_STATUS.md  DOCUMENTATION_INDEX.md  FINAL_BUILD_STATUS.md  QUICK_START.md  README.md  README_DEVOPS.md  START_HERE.md  build.gradle.kts  codemagic.yaml  gradlew  gradlew.bat  settings.gradle.kts  test_build.sh
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/kotlin/com/cinecamera/test/: HiltTestRunner.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/kotlin/com/cinecamera/: CineCameraApp.kt
app/src/main/kotlin/com/cinecamera/di/: AppModule.kt
app/src/main/kotlin/com/cinecamera/ui/audio/: AudioSetupActivity.kt
app/src/main/kotlin/com/cinecamera/ui/camera/: CameraActivity.kt  CameraViewModel.kt
app/src/main/kotlin/com/cinecamera/ui/camera/usecase/: StartBroadcastUseCase.kt  StartRecordingUseCase.kt
app/src/main/kotlin/com/cinecamera/ui/gallery/: GalleryActivity.kt
app/src/main/kotlin/com/cinecamera/ui/lut/: LutManagerActivity.kt
app/src/main/kotlin/com/cinecamera/ui/monetization/: UpgradeActivity.kt
app/src/main/kotlin/com/cinecamera/ui/preset/: PresetManagerActivity.kt
app/src/main/kotlin/com/cinecamera/ui/settings/: SettingsActivity.kt
app/src/main/kotlin/com/cinecamera/ui/splash/: SplashActivity.kt
app/src/main/kotlin/com/cinecamera/ui/stream/: StreamSetupActivity.kt
app/src/main/kotlin/com/cinecamera/ui/telemetry/: TelemetryActivity.kt
app/src/main/kotlin/com/cinecamera/utils/: MediaStoreHelper.kt
app/src/main/res/anim/: rec_blink.xml
app/src/main/res/drawable/: audio_meter_background.xml  audio_meter_level.xml  divider_transparent_32dp.xml  record_button_idle.xml  record_button_recording.xml  record_button_selector.xml
app/src/main/res/font/: roboto_condensed.xml
app/src/main/res/layout/: activity_camera.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/test/kotlin/com/cinecamera/audio/: AudioEngineTest.kt
app/src/test/kotlin/com/cinecamera/monetization/: MonetizationEngineTest.kt
app/src/test/kotlin/com/cinecamera/recovery/: RecoveryEngineTest.kt
app/src/test/kotlin/com/cinecamera/stability/: SignalProcessingTest.kt
app/src/test/kotlin/com/cinecamera/stress/: StressTests.kt
app/src/test/kotlin/com/cinecamera/usecase/: UseCaseTest.kt
app/src/test/kotlin/com/cinecamera/viewmodel/: CameraViewModelTest.kt
docs/: ARCHITECTURE.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
modules/audio-engine/: build.gradle.kts
modules/audio-engine/src/main/kotlin/com/cinecamera/audio/: ProfessionalAudioEngine.kt
modules/camera-engine/: build.gradle.kts
modules/camera-engine/src/main/kotlin/com/cinecamera/camera/: ICameraEngine.kt
modules/encoding-engine/: build.gradle.kts
modules/encoding-engine/src/main/kotlin/com/cinecamera/encoding/: IEncodingEngine.kt
modules/image-processing-engine/: build.gradle.kts
modules/image-processing-engine/src/main/kotlin/com/cinecamera/imageprocessing/: IImageProcessingEngine.kt
modules/monetization-engine/: build.gradle.kts
modules/monetization-engine/src/main/kotlin/com/cinecamera/monetization/: MonetizationEngine.kt  MonetizationModels.kt
modules/preset-engine/: build.gradle.kts
modules/preset-engine/src/main/kotlin/com/cinecamera/preset/: PresetEngine.kt
modules/recovery-engine/: build.gradle.kts
modules/recovery-engine/src/main/kotlin/com/cinecamera/recovery/: RecoveryEngine.kt  RecoveryModels.kt
modules/stability-engine/: build.gradle.kts
modules/stability-engine/src/main/kotlin/com/cinecamera/stability/: SystemStabilityEngine.kt
modules/stabilization-engine/: build.gradle.kts
modules/stabilization-engine/src/main/kotlin/com/cinecamera/stabilization/: IStabilizationEngine.kt
modules/streaming-engine/: build.gradle.kts
modules/streaming-engine/src/main/kotlin/com/cinecamera/streaming/: RTMPStreamingEngine.kt  SRTStreamingController.kt  StreamingModels.kt
modules/telemetry-engine/: build.gradle.kts
modules/telemetry-engine/src/main/kotlin/com/cinecamera/telemetry/: TelemetryEngine.kt
scripts/: build_dependencies.sh
